adding config to reuse normal DL notebooks

--- a/Notebooks/DL/bilstm-ids.ipynb
+++ b/Notebooks/DL/bilstm-ids.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "efdf335f",
    "metadata": {
     "execution": {
@@ -86,6 +86,9 @@
     "# def add_centralities(df, new_path, graph_path, dataset, cn_measures):\n",
     "        # change 1.05\n",
     "    # G = nx.from_pandas_edgelist(df, source=\"Src IP\",target=\"Dst IP\", create_using=nx.DiGraph())\n",
+    "    if NO_NODE_FEATURE:\n",
+    "        print(\"NO node features added\")\n",
+    "        return df \n",
     "    G = nx.from_pandas_edgelist( df, source=dataset.src_ip_col, target=dataset.dst_ip_col, create_using=nx.DiGraph())\n",
     "    G.remove_nodes_from(list(nx.isolates(G)))\n",
     "    for node in G.nodes():\n",
@@ -206,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "e84d5103",
    "metadata": {
     "execution": {
@@ -231,6 +234,7 @@
     "# name = \"cic_ids_2017_5_percent\"\n",
     "# name = \"cic_ids_2017\"\n",
     "\n",
+    "NO_NODE_FEATURE=False # False: centrality added  True: centality not used\n",
     "dataset = datasets[name]"
    ]
   },
@@ -3024,13 +3028,13 @@
        "description": "",
        "description_allow_html": false,
        "layout": "IPY_MODEL_d2a7d96d1b5c4e149673248ed52cbf86",
-       "max": 3136.0,
-       "min": 0.0,
+       "max": 3136,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_22fe0ba13e5243de8165f902de5c74c3",
        "tabbable": null,
        "tooltip": null,
-       "value": 3136.0
+       "value": 3136
       }
      },
      "42bdd1b55db34be9bb9b88a86e05823d": {
@@ -3423,13 +3427,13 @@
        "description": "",
        "description_allow_html": false,
        "layout": "IPY_MODEL_b1e3cd912a1744af8bf06055930f4cca",
-       "max": 3136.0,
-       "min": 0.0,
+       "max": 3136,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_59c824e74e824174a04329ffee171fc1",
        "tabbable": null,
        "tooltip": null,
-       "value": 3136.0
+       "value": 3136
       }
      },
      "58a681d81e92480fbf6e1fd95ae2f4ff": {
@@ -3906,13 +3910,13 @@
        "description": "",
        "description_allow_html": false,
        "layout": "IPY_MODEL_cde317f329f24824bc78f1163dbb5ba4",
-       "max": 3136.0,
-       "min": 0.0,
+       "max": 3136,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_3833679db2384676819a112a937fe5c9",
        "tabbable": null,
        "tooltip": null,
-       "value": 3136.0
+       "value": 3136
       }
      },
      "6a8066a0f35143e28c9502d55ac5b2b7": {
@@ -4203,13 +4207,13 @@
        "description": "",
        "description_allow_html": false,
        "layout": "IPY_MODEL_ee9c0eeec5ae4059bc0249acb66fc2cb",
-       "max": 3136.0,
-       "min": 0.0,
+       "max": 3136,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_cad35ae234fd48168c509a709e33baa1",
        "tabbable": null,
        "tooltip": null,
-       "value": 3136.0
+       "value": 3136
       }
      },
      "7814763771214eebaad0682d4c65df63": {
@@ -4901,13 +4905,13 @@
        "description": "",
        "description_allow_html": false,
        "layout": "IPY_MODEL_696e8cf4a881460383eb00cf8580a9e4",
-       "max": 3136.0,
-       "min": 0.0,
+       "max": 3136,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_12b4acf51d074c72ae9cf882bdc4036e",
        "tabbable": null,
        "tooltip": null,
-       "value": 3136.0
+       "value": 3136
       }
      },
      "936bc7ceaab44402860d56d606aa3e49": {
@@ -5003,13 +5007,13 @@
        "description": "",
        "description_allow_html": false,
        "layout": "IPY_MODEL_e1a72da16754403c944a7a2e5aa31a90",
-       "max": 3136.0,
-       "min": 0.0,
+       "max": 3136,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_d6fb6ad7fd674015a43c7684a42598a2",
        "tabbable": null,
        "tooltip": null,
-       "value": 3136.0
+       "value": 3136
       }
      },
      "9765ea9c0be54c1cb760445192658ce4": {
@@ -5128,13 +5132,13 @@
        "description": "",
        "description_allow_html": false,
        "layout": "IPY_MODEL_430de97e02664bdf91389140c5d1a558",
-       "max": 3136.0,
-       "min": 0.0,
+       "max": 3136,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_0f0e5041695c44388fc0ae4d7a0a866e",
        "tabbable": null,
        "tooltip": null,
-       "value": 3136.0
+       "value": 3136
       }
      },
      "9db1044a8d1d44ae8ceba415704c52c7": {
@@ -5436,13 +5440,13 @@
        "description": "",
        "description_allow_html": false,
        "layout": "IPY_MODEL_60efcfc8291e47d29a4ffb0e49e3b1cc",
-       "max": 3136.0,
-       "min": 0.0,
+       "max": 3136,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_29c1f2cfa4f745498ce03ec4a9974ff3",
        "tabbable": null,
        "tooltip": null,
-       "value": 3136.0
+       "value": 3136
       }
      },
      "b08b856c62b04e159b7918a412c09d2b": {
@@ -5893,13 +5897,13 @@
        "description": "",
        "description_allow_html": false,
        "layout": "IPY_MODEL_03e8e08ab6714545bd73d52b106771b7",
-       "max": 3136.0,
-       "min": 0.0,
+       "max": 3136,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_0e75b084c2ee40f98e25c06945665d2d",
        "tabbable": null,
        "tooltip": null,
-       "value": 3136.0
+       "value": 3136
       }
      },
      "c37c0fed126f4dcaa43f387f63ecb8f3": {
@@ -5966,13 +5970,13 @@
        "description": "",
        "description_allow_html": false,
        "layout": "IPY_MODEL_89c41a15f14049309b08908c336fed2e",
-       "max": 3136.0,
-       "min": 0.0,
+       "max": 3136,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_8bbcbc8e77b84a50bc668ebb0401dff8",
        "tabbable": null,
        "tooltip": null,
-       "value": 3136.0
+       "value": 3136
       }
      },
      "c84e5b5206b446198aedf483bce9f608": {
@@ -6395,13 +6399,13 @@
        "description": "",
        "description_allow_html": false,
        "layout": "IPY_MODEL_d5f0ec72a4fe4f6fa02db970ce73bba4",
-       "max": 2.0,
-       "min": 0.0,
+       "max": 2,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_4f75ae0c4db744b2a5936061c41a17b0",
        "tabbable": null,
        "tooltip": null,
-       "value": 2.0
+       "value": 2
       }
      },
      "d50cdf0ff00d46ea9e0918b411bb0653": {
@@ -6580,13 +6584,13 @@
        "description": "",
        "description_allow_html": false,
        "layout": "IPY_MODEL_ef2b92ef8454420a80d305178373b7d8",
-       "max": 3136.0,
-       "min": 0.0,
+       "max": 3136,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_02977a7ad78d402fbe1fe6640ea03cdf",
        "tabbable": null,
        "tooltip": null,
-       "value": 3136.0
+       "value": 3136
       }
      },
      "d6fb6ad7fd674015a43c7684a42598a2": {
@@ -6661,13 +6665,13 @@
        "description": "",
        "description_allow_html": false,
        "layout": "IPY_MODEL_7bb4a3032da246f098f117cf312d381d",
-       "max": 3136.0,
-       "min": 0.0,
+       "max": 3136,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_5320aab2420d47b2b89058be1d4cc7f5",
        "tabbable": null,
        "tooltip": null,
-       "value": 3136.0
+       "value": 3136
       }
      },
      "db49ef929b8e428d9970e827fae5db72": {
@@ -6752,13 +6756,13 @@
        "description": "",
        "description_allow_html": false,
        "layout": "IPY_MODEL_80bbdf554f3b4f3e89c32af406a64ce9",
-       "max": 14631.0,
-       "min": 0.0,
+       "max": 14631,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_343bd093b9e348bc9ff97d4d289f8b6b",
        "tabbable": null,
        "tooltip": null,
-       "value": 14631.0
+       "value": 14631
       }
      },
      "e1a72da16754403c944a7a2e5aa31a90": {
@@ -6984,13 +6988,13 @@
        "description": "",
        "description_allow_html": false,
        "layout": "IPY_MODEL_e311add6b2284e7493ef80425f896b62",
-       "max": 3136.0,
-       "min": 0.0,
+       "max": 3136,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_01755703dbfb4f4ba150b4b967404fa4",
        "tabbable": null,
        "tooltip": null,
-       "value": 3136.0
+       "value": 3136
       }
      },
      "e55371e93fdf406d881ab6b91fba60c9": {
@@ -7436,13 +7440,13 @@
        "description": "",
        "description_allow_html": false,
        "layout": "IPY_MODEL_62e5339a56634a06b6577427ef64096c",
-       "max": 3136.0,
-       "min": 0.0,
+       "max": 3136,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_d71b1e0be6d947b6b73e6028036bec9d",
        "tabbable": null,
        "tooltip": null,
-       "value": 3136.0
+       "value": 3136
       }
      },
      "fe09f598d11d4d348814baaa858a0ff8": {
