--- a/Notebooks/DL/lstm-model-ids.ipynb
+++ b/Notebooks/DL/lstm-model-ids.ipynb
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "8bc34dc2",
    "metadata": {
     "execution": {
@@ -305,6 +305,9 @@
     "# def add_centralities(df, new_path, graph_path, dataset, cn_measures):\n",
     "        # change 1.05\n",
     "    # G = nx.from_pandas_edgelist(df, source=\"Src IP\",target=\"Dst IP\", create_using=nx.DiGraph())\n",
+    "    if NO_NODE_FEATURE:\n",
+    "        print(\"NO node features added\")\n",
+    "        return df\n",
     "    G = nx.from_pandas_edgelist( df, source=dataset.src_ip_col, target=dataset.dst_ip_col, create_using=nx.DiGraph())\n",
     "    G.remove_nodes_from(list(nx.isolates(G)))\n",
     "    for node in G.nodes():\n",
@@ -425,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "7e177315",
    "metadata": {
     "execution": {
@@ -449,6 +452,7 @@
     "name = \"cic_ton_iot\"\n",
     "# name = \"cic_ids_2017_5_percent\"\n",
     "# name = \"cic_ids_2017\"\n",
+    "NO_NODE_FEATURE=False # False: centrality added  True: centality not used\n",
     "\n",
     "dataset = datasets[name]"
    ]
@@ -2867,13 +2871,13 @@
        "description": "",
        "description_allow_html": false,
        "layout": "IPY_MODEL_e61cf0494d494581bb41cfeb65ed1a46",
-       "max": 3136.0,
-       "min": 0.0,
+       "max": 3136,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_f1a9d55e4d034cfda3afefcf4b6a6ae0",
        "tabbable": null,
        "tooltip": null,
-       "value": 3136.0
+       "value": 3136
       }
      },
      "0790005b27644dcc85dbe9b1c507e9e5": {
@@ -4001,13 +4005,13 @@
        "description": "",
        "description_allow_html": false,
        "layout": "IPY_MODEL_eccb940e6cf743c090743452cbf2b128",
-       "max": 3136.0,
-       "min": 0.0,
+       "max": 3136,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_565d49fb2a924c149e47321f0eb6fe75",
        "tabbable": null,
        "tooltip": null,
-       "value": 3136.0
+       "value": 3136
       }
      },
      "3093198d5eb04a8ab1dab5a2eb0b251b": {
@@ -4203,13 +4207,13 @@
        "description": "",
        "description_allow_html": false,
        "layout": "IPY_MODEL_7104943d77de404499bef66794e9f449",
-       "max": 2.0,
-       "min": 0.0,
+       "max": 2,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_b2ad04e47ace4656a1c7b97780ea4528",
        "tabbable": null,
        "tooltip": null,
-       "value": 2.0
+       "value": 2
       }
      },
      "36d9244aa3cf4f8bb8e635b8ef1e1f93": {
@@ -4253,13 +4257,13 @@
        "description": "",
        "description_allow_html": false,
        "layout": "IPY_MODEL_66d622f0b2964f65ac5da5d43bf6ce59",
-       "max": 3136.0,
-       "min": 0.0,
+       "max": 3136,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_719502f83976419d928875f0d32d9cee",
        "tabbable": null,
        "tooltip": null,
-       "value": 3136.0
+       "value": 3136
       }
      },
      "378deb55f79f4df2aca92fbd4be4895a": {
@@ -4401,13 +4405,13 @@
        "description": "",
        "description_allow_html": false,
        "layout": "IPY_MODEL_5fa9d98cb1ad407289abf6308266c7d8",
-       "max": 3136.0,
-       "min": 0.0,
+       "max": 3136,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_423141aef54444c1b7c51bf84da7561d",
        "tabbable": null,
        "tooltip": null,
-       "value": 3136.0
+       "value": 3136
       }
      },
      "3dacc8cb403846afabc4e591f1206479": {
@@ -4839,13 +4843,13 @@
        "description": "",
        "description_allow_html": false,
        "layout": "IPY_MODEL_a70d94c27da94b1b83e8197099c86ae8",
-       "max": 3136.0,
-       "min": 0.0,
+       "max": 3136,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_0d9744e575274bf89ee8f995f58564c8",
        "tabbable": null,
        "tooltip": null,
-       "value": 3136.0
+       "value": 3136
       }
      },
      "525f472a92d34f2793b6af606ef38baa": {
@@ -4922,13 +4926,13 @@
        "description": "",
        "description_allow_html": false,
        "layout": "IPY_MODEL_309dadddc64c4b3fb1d4390a6c8ddfb8",
-       "max": 3136.0,
-       "min": 0.0,
+       "max": 3136,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_9da1c08a031f4bcaa281bc91768596bc",
        "tabbable": null,
        "tooltip": null,
-       "value": 3136.0
+       "value": 3136
       }
      },
      "5d125330afbc4b538e700e9940bcee22": {
@@ -5381,13 +5385,13 @@
        "description": "",
        "description_allow_html": false,
        "layout": "IPY_MODEL_29c3dce715804aa782798eb666f79ab8",
-       "max": 3136.0,
-       "min": 0.0,
+       "max": 3136,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_6136473483284a1fad73555847069b8e",
        "tabbable": null,
        "tooltip": null,
-       "value": 3136.0
+       "value": 3136
       }
      },
      "6a7da797e0f643f1a61d0bff837d0d4b": {
@@ -5814,13 +5818,13 @@
        "description": "",
        "description_allow_html": false,
        "layout": "IPY_MODEL_9a6e1f414ce741e9980162e83bc9822d",
-       "max": 3136.0,
-       "min": 0.0,
+       "max": 3136,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_7cde700de6b64b38a8fffab44bda24b0",
        "tabbable": null,
        "tooltip": null,
-       "value": 3136.0
+       "value": 3136
       }
      },
      "729614036bf04410bfc12e953cf50527": {
@@ -5929,13 +5933,13 @@
        "description": "",
        "description_allow_html": false,
        "layout": "IPY_MODEL_deba2108bbc4488bb26a541ecb397a8f",
-       "max": 3136.0,
-       "min": 0.0,
+       "max": 3136,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_703c51d2bb02429196467f6b00fc03f1",
        "tabbable": null,
        "tooltip": null,
-       "value": 3136.0
+       "value": 3136
       }
      },
      "76180d696df44f89bddcccd5172e8bec": {
@@ -6243,13 +6247,13 @@
        "description": "",
        "description_allow_html": false,
        "layout": "IPY_MODEL_c7d60811b69f4bf1867291d56ee572df",
-       "max": 3136.0,
-       "min": 0.0,
+       "max": 3136,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_ac6f978af0ef4e5db2dfb0971839c221",
        "tabbable": null,
        "tooltip": null,
-       "value": 3136.0
+       "value": 3136
       }
      },
      "84c04820d7244a3197b5bfe4ca1b5204": {
@@ -6269,13 +6273,13 @@
        "description": "",
        "description_allow_html": false,
        "layout": "IPY_MODEL_ae3e9447b0204645ac433da28a1b5772",
-       "max": 3136.0,
-       "min": 0.0,
+       "max": 3136,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_fc3ce419df1842eabd51dd26d8e9b83a",
        "tabbable": null,
        "tooltip": null,
-       "value": 3136.0
+       "value": 3136
       }
      },
      "84f65ff6cd524f479de1f29e936621ab": {
@@ -6295,13 +6299,13 @@
        "description": "",
        "description_allow_html": false,
        "layout": "IPY_MODEL_0790005b27644dcc85dbe9b1c507e9e5",
-       "max": 3136.0,
-       "min": 0.0,
+       "max": 3136,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_e5d86d3670574f818b367cba3d1b1f30",
        "tabbable": null,
        "tooltip": null,
-       "value": 3136.0
+       "value": 3136
       }
      },
      "85a325ff61734de799a190419653e361": {
@@ -6390,13 +6394,13 @@
        "description": "",
        "description_allow_html": false,
        "layout": "IPY_MODEL_c8bc4d1cc93c4c53b35dcf5d59e099bb",
-       "max": 3136.0,
-       "min": 0.0,
+       "max": 3136,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_60f0d8d204aa412fa0d04d16feeb5ee7",
        "tabbable": null,
        "tooltip": null,
-       "value": 3136.0
+       "value": 3136
       }
      },
      "8b4218d635d44d7c9512c7ced5870358": {
@@ -7098,13 +7102,13 @@
        "description": "",
        "description_allow_html": false,
        "layout": "IPY_MODEL_a7b154cbce0246bf9711f7a98ea283ef",
-       "max": 14631.0,
-       "min": 0.0,
+       "max": 14631,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_fdf1cca77dc24712b7c06f2997ac7b9f",
        "tabbable": null,
        "tooltip": null,
-       "value": 14631.0
+       "value": 14631
       }
      },
      "a8fc1b796e0241e99f3188dcdd127e31": {
@@ -7481,13 +7485,13 @@
        "description": "",
        "description_allow_html": false,
        "layout": "IPY_MODEL_14336ec4a4744a839df2534ec091643a",
-       "max": 3136.0,
-       "min": 0.0,
+       "max": 3136,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_d37efd562c1a48a5a6968357e1270b9c",
        "tabbable": null,
        "tooltip": null,
-       "value": 3136.0
+       "value": 3136
       }
      },
      "c24ceae5910f4d93ad977f12664da362": {
@@ -7596,13 +7600,13 @@
        "description": "",
        "description_allow_html": false,
        "layout": "IPY_MODEL_ff594a448b534907b9f56ced88e6d39d",
-       "max": 3136.0,
-       "min": 0.0,
+       "max": 3136,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_378deb55f79f4df2aca92fbd4be4895a",
        "tabbable": null,
        "tooltip": null,
-       "value": 3136.0
+       "value": 3136
       }
      },
      "c7097eb32d434b9a8191ae75c8769094": {
@@ -7774,13 +7778,13 @@
        "description": "",
        "description_allow_html": false,
        "layout": "IPY_MODEL_dd8e847c8d6e4dfa9ffd55bac8116747",
-       "max": 3136.0,
-       "min": 0.0,
+       "max": 3136,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_0c74b508888649fdbe197a57ffb86a80",
        "tabbable": null,
        "tooltip": null,
-       "value": 3136.0
+       "value": 3136
       }
      },
      "c9a9024c34fd46f3a521922f13ec8b00": {
